# olio-ohjelmointi

./: .gitignore
vk1_t1/: CMakeLists.txt  main.cpp
vk1_t2/: main.cpp
vk1_t3/: CMakeLists.txt  main.cpp
vk1_teht/vk1_t2/: CMakeLists.txt  main.cpp
vk2_t1/: game.cpp  game.h  main.cpp
vk3_kt1-2/: italianchef.cpp  italianchef.h  main.cpp
vk3_kt3/: chef.cpp  chef.h  italianchef.cpp  main.cpp
vk3_kt4/: italianchef.cpp  italianchef.h  main.cpp
vk3_te1_inheritance/: animal.cpp  animal.h  bear.cpp  bear.h  cat.cpp  cat.h  main.cpp
vk4_kt/: asunto.cpp  asunto.h  katutaso.cpp  katutaso.h  kerros.cpp  kerros.h  kerrostalo.cpp  kerrostalo.h  main.cpp
vk5_extra_kt/: devicebaseclass.cpp  devicebaseclass.h  devicedisplay.cpp  devicedisplay.h  devicemouse.cpp  devicemouse.h  devicetouchpad.cpp  devicetouchpad.h  main.cpp  mydeviceui.cpp  mydeviceui.h
vk5_kt/: asunto.h  katutaso.cpp  katutaso.h  kerros.cpp  kerros.h  kerrostalo.cpp  kerrostalo.h  main.cpp
vk6_kt1/: mainwindow.cpp  mainwindow.h  mainwindow.ui
vk6_kt2/: mainwindow.cpp  mainwindow.h  mainwindow.ui
vk7_kt/: mainwindow.cpp  mainwindow.h  mainwindow.ui
